# gmail-ai-processor

./: .env.example  .gitignore  GITHUB_ACTIONS_SETUP.md  LICENSE  README.md  README_OLD.md  UV_SETUP.md  agent_email_processor.py  architecture_diagram.puml  class_diagram.puml  config.py  credentials_template.json  dataflow_diagram.puml  email_processor.py  main.py  main_agent.py  project_flow_diagram.md  pyproject.toml  requirements.txt  run_daily.bat  sequence_diagram.puml  test_callmebot.py  test_structure.py  uv.toml
.github/workflows/: daily-email-processing.yml  daily-email-processor.yml
agents/: __init__.py  analysis_agent.py  base_agent.py  calendar_agent.py  coordinator_agent.py  email_agent.py  notification_agent.py
services/: __init__.py  ai_service.py  calendar_service.py  email_service.py  whatsapp_service.py
